--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
 </head>
 <body class="bg-dark text-gray-200 antialiased selection:bg-primary selection:text-white">
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
